# compress-io

./: LICENSE  README.md  package.json
.github/workflows/: release.yml
src/: App.css  App.jsx
src-tauri/: Cargo.toml  compress-io.key.pub  tauri.conf.json  tauri.conf.json.pub
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
