[package]
name = "universal-compressor"
version = "0.1.21"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# 👇 NEW FEATURES SECTION 👇
# This creates the "switch" for your two versions
[features]
default = ["cpu"] # Default build is CPU (Safe)
cpu = []
gpu = []          # We will turn this on manually for the Pro version

[lib]
name = "universal_compressor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
zip = "7.0.0"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
